--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,24 @@
 #
 # ----------------------------------------------------------------------------
 
-source 'https://supermarket.chef.io'
+# TODO(alexstephen): Monitor rubocop upsteam changes
+# https://github.com/bbatsov/rubocop/pull/4329
+# Change will allow rubocop to use --ignore-parent-exclusion flag
+# Current rubocop upstream will not check Chef files because of AllCops/Exclude
+AllCops:
+  Exclude:
+    # Foodcritic and Rubocop give conflicting information.
+    - 'recipes/*'
 
-metadata
+Metrics/AbcSize:
+  Max: 25
+
+Metrics/BlockLength:
+  Enabled: false
+
+Metrics/MethodLength:
+  Max: 15
+
+Naming/FileName:
+  Exclude:
+    - 'recipes/*.rb'
